# Shiori

./: .gitignore  README.md  package-lock.json  package.json
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.tsx  auth.ts  cloudSync.ts  storage.ts  styles.css  useDebouncedEffect.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
docs/: sync-and-supabase.md  technical-direction.md
docs/tickets/: README.md  SHI-007-sqlite-fts-search.md  SHI-014-sync-status-ui.md  SHI-016-web-feasibility.md  SHI-017-iphone-implementation-comparison.md
docs/tickets/completed/: SHI-001-monorepo-foundation.md  SHI-002-tauri-react-desktop-scaffold.md  SHI-003-sqlite-schema-migrations.md  SHI-004-local-note-crud.md  SHI-005-editor-autosave.md  SHI-006-soft-delete-notes.md  SHI-008-tags.md  SHI-009-supabase-schema-auth-rls.md  SHI-010-supabase-auth-desktop.md  SHI-011-sync-events.md  SHI-012-manual-diff-sync.md  SHI-013-simple-auto-sync.md  SHI-015-conflict-copy.md  SHI-018-tag-management-enhancement.md  SHI-019-markdown-text-support.md  SHI-020-tag-autocomplete.md  SHI-021-deleted-notes-restore.md  SHI-022-note-list-readability.md  SHI-023-keyboard-shortcuts.md  SHI-024-sync-status-detail.md  SHI-025-auto-sync-ux.md  SHI-026-email-password-auth.md
